docs: :memo: Add a logo + description for the marketplace
Add a logo inside readme and for the marketplace. Add links to repo for the marketplace.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
     "name": "dark-theme---the-new",
     "displayName": "Dark Theme : The New",
     "description": "Tired of the basic dark theme of VS Code ? Tired of existing dark themes ? I was like you and I took one and improve it for myself. This theme is dark (oh surprise) but has a darker background, better color in terminal and git/errors are more flashies.",
-    "version": "0.0.1",
+    "version": "1.0.0",
+    "license": "MIT",
+	"publisher": "Baptiste Crouzet",
+    "homepage": "https://github.com/BaptisteCrouzet/DarkTheme-The-New/tree/master",
+    "bugs": {
+        "url": "https://github.com/BaptisteCrouzet/DarkTheme-The-New/issues",
+        "email": "mailpro@baptistecrouzet.fr"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/BaptisteCrouzet/DarkTheme-The-New.git"
+    },
     "engines": {
         "vscode": "^1.50.0"
     },
@@ -17,5 +28,10 @@
                 "path": "./themes/Dark Theme  The New-color-theme.json"
             }
         ]
-    }
+    },
+    "galleryBanner": {
+        "color": "#9500a6",
+        "theme": "dark"
+    },
+    "icon": "assets/Dark Theme the new@0,25x.png"
 }
