Fix basic description

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "dark-theme-the-new",
     "displayName": "Dark-Theme-The-New",
-    "description": "Tired of the basic dark theme of VS Code ? Tired of existing dark themes ? I was like you and I took one and improve it for myself. This theme is dark (oh surprise) but has a darker background, better color in terminal and git/errors are more flashies.",
-    "version": "1.0.0",
+    "description": "Tired of the basic dark theme of VS Code ? Tired of existing dark themes ? I was like you, I took one and improve it for me. Now I share it. This theme is dark (oh surprise) but has a darker background, better colors in terminal and git/errors are lighter.",
+    "version": "1.0.1",
     "license": "MIT",
 	"publisher": "BaptisteCrouzet",
     "homepage": "https://github.com/BaptisteCrouzet/DarkTheme-The-New/tree/master",
@@ -30,7 +30,7 @@
         ]
     },
     "galleryBanner": {
-        "color": "#9500a6",
+        "color": "#232323",
         "theme": "dark"
     },
     "icon": "assets/Dark-Theme-the-new@0,25x.png"
