--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
     "name": "dark-theme-the-new",
-    "displayName": "Dark-Theme-The-New",
-    "description": "Tired of the basic dark theme of VS Code ? Tired of existing dark themes ? I was like you, I took one and improve it for me. Now I share it. This theme is dark (oh surprise) but has a darker background, better colors in terminal and git/errors are lighter.",
-    "version": "1.1.2",
+    "displayName": "Dark Theme : The New",
+    "description": "Dark Theme - The New is a sleek and modern dark theme for Visual Studio Code. It's been crafted with a keen eye for detail to provide a comfortable and delightful coding experience.",
+    "version": "1.2.0",
     "license": "MIT",
 	"publisher": "BaptisteCrouzet",
-    "homepage": "https://github.com/BaptisteCrouzet/DarkTheme-The-New/tree/master",
+    "keywords": [
+        "dark",
+        "dark theme",
+        "vscode",
+        "visual studio",
+        "visual studio code",
+        "dark theme the new",
+        "purple theme",
+        "dark purple theme"
+    ],
+    "homepage": "https://github.com/BaptisteCrouzet/DarkTheme-The-New",
     "bugs": {
         "url": "https://github.com/BaptisteCrouzet/DarkTheme-The-New/issues",
         "email": "mailpro@baptistecrouzet.fr"
@@ -15,7 +25,7 @@
         "url": "https://github.com/BaptisteCrouzet/DarkTheme-The-New.git"
     },
     "engines": {
-        "vscode": "^1.50.0"
+        "vscode": "^1.83.0"
     },
     "categories": [
         "Themes"
@@ -30,8 +40,8 @@
         ]
     },
     "galleryBanner": {
-        "color": "#232323",
+        "color": "##000000",
         "theme": "dark"
     },
-    "icon": "assets/Dark-Theme-the-new@0,25x.png"
+    "icon": "assets/logow@0,25x.jpg"
 }
