docs(package.json): :sparkles: Updates the package.json

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
         "color": "##000000",
         "theme": "dark"
     },
-    "icon": "assets/logow@0,25x.jpg"
+    "icon": "assets/logo@0,25x.jpg"
 }
